--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,6 +36,8 @@ $body-bg: #fff;
 $border-radius: .4rem;
 $success: #7952b3;
 
+$grid-gutter-width: 126px;
+
 $container-max-widths: (
   sm: 540px,
   md: 720px,
@@ -54,6 +56,11 @@ $grid-breakpoints: (
 );
 
 
+$mif-orange: #F39000;
+
+@import "mif-overrides";
+
+
 // Required
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
@@ -64,37 +71,37 @@ $grid-breakpoints: (
 @import "bootstrap/scss/reboot";
 
 @import "bootstrap/scss/type";
-// @import "bootstrap/scss/images";
+ @import "bootstrap/scss/images";
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
-// @import "bootstrap/scss/tables";
-// @import "bootstrap/scss/forms";
+ @import "bootstrap/scss/tables";
+ @import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/dropdown";
-// @import "bootstrap/scss/button-group";
-// @import "bootstrap/scss/nav";
-// @import "bootstrap/scss/navbar"; // Requires nav
-// @import "bootstrap/scss/card";
-// @import "bootstrap/scss/breadcrumb";
-// @import "bootstrap/scss/accordion";
-// @import "bootstrap/scss/pagination";
-// @import "bootstrap/scss/badge";
-// @import "bootstrap/scss/alert";
-// @import "bootstrap/scss/progress";
-// @import "bootstrap/scss/list-group";
+ @import "bootstrap/scss/button-group";
+ @import "bootstrap/scss/nav";
+ @import "bootstrap/scss/navbar"; // Requires nav
+ @import "bootstrap/scss/card";
+ @import "bootstrap/scss/breadcrumb";
+ @import "bootstrap/scss/accordion";
+ @import "bootstrap/scss/pagination";
+ @import "bootstrap/scss/badge";
+ @import "bootstrap/scss/alert";
+ @import "bootstrap/scss/progress";
+ @import "bootstrap/scss/list-group";
 @import "bootstrap/scss/close";
-// @import "bootstrap/scss/toasts";
+ @import "bootstrap/scss/toasts";
 @import "bootstrap/scss/modal"; // Requires transitions
-// @import "bootstrap/scss/tooltip";
-// @import "bootstrap/scss/popover";
-// @import "bootstrap/scss/carousel";
-// @import "bootstrap/scss/spinners";
+ @import "bootstrap/scss/tooltip";
+ @import "bootstrap/scss/popover";
+ @import "bootstrap/scss/carousel";
+ @import "bootstrap/scss/spinners";
 @import "bootstrap/scss/offcanvas"; // Requires transitions
-// @import "bootstrap/scss/placeholders";
+ @import "bootstrap/scss/placeholders";
 
 // Helpers
-// @import "bootstrap/scss/helpers";
+ @import "bootstrap/scss/helpers";
 
 // Utilities
 @import "bootstrap/scss/utilities/api";
@@ -104,7 +111,8 @@ $grid-breakpoints: (
 // Custom styles
 //
 
+@import "mif-base";
 @import "icon-list";
 
-@import "mif-base";
+
 
